cabal-version: 3.0

name: pg
version: 0

executable pg
  build-depends:
    base ^>= 4.18,
    directory == 1.3.8.3,
    optparse-applicative == 0.18.1.0,
    process == 1.6.18.0,
    text == 2.1.1,
    unix == 2.8.5.0,
  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedStrings
    ViewPatterns
  default-language: GHC2021
  ghc-options: -Wall
  main-is: Main.hs
