cabal-version: 3.0

name: pg
version: 0

executable pg
  build-depends:
    aeson == 2.2.1.0,
    base ^>= 4.18,
    bytestring == 0.11.5.2,
    directory == 1.3.8.3,
    optparse-applicative == 0.18.1.0,
    pretty-simple == 4.1.2.0,
    prettyprinter == 1.7.1,
    prettyprinter-ansi-terminal == 1.1.3,
    process == 1.6.18.0,
    text == 2.1.1,
    text-ansi == 0.3.0.1,
    unix == 2.8.5.0,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    ViewPatterns
  default-language: GHC2021
  ghc-options: -Wall -threaded "-with-rtsopts=-A64m -N2"
  main-is: Main.hs
  other-modules:
    PgPlan
    PgPlanJson
    PgPlanPretty
